--- a/scss/base.scss
+++ b/scss/base.scss
@@ -1,6 +1,8 @@
-  body {
-    background: #121212;
-    color: white;
-    font-family: cursive;
-    margin: 0;
-  }
+body {
+  margin: 0;
+  height: 100vh;
+  overflow: hidden;
+  background: #121212;
+  color: white;
+  font-family: cursive;
+}
