--- a/scss/stats.scss
+++ b/scss/stats.scss
@@ -17,13 +17,14 @@
 
 
 .stats__grid {
-  width: 80%;
-  max-width: 1000px;
-
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-  gap: 30px;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+
+  max-width: 1200px;
+  margin: 0 auto;
 }
+
 
 
 .stats__card {
