--- a/scss/casino.scss
+++ b/scss/casino.scss
@@ -83,6 +83,9 @@
   border-radius: 10px;
   border: 2px solid #f5c542;
   background: #111;
+  position: relative;
+  z-index: 3;
+  pointer-events: auto; 
   color: #fff;
 }
 
@@ -162,6 +165,8 @@
   align-items: center;
   gap: 22px;
   text-align: center;
+  position: relative;
+  z-index: 2;
 }
 
 .slot__reels {
@@ -177,12 +182,7 @@
   text-align: center;
 }
 
-.slot__input {
-  width: 180px;
-  padding: 10px;
-  text-align: center;
-  font-size: 16px;
-}
+
 
 #slotPlay {
   width: 220px;
