--- a/scss/casino.scss
+++ b/scss/casino.scss
@@ -248,8 +248,9 @@
   width: 70%;
   height: 70%;
   object-fit: contain;
-  transition: transform 0.25s ease, filter 0.25s ease;
+  transition: none;
 }
+
 
 
 .slot-machine {
@@ -277,9 +278,7 @@
 }
 
 
-.slot--spinning img {
-  filter: blur(4px);
-}
+
 
 
 #casino-slots .tab__inner--center {
